Fixed Local Param editing view
Can no longer accidentally edit Local Param A in Param B view and vice versa

--- a/templates/font2.html
+++ b/templates/font2.html
@@ -29,7 +29,7 @@ h3_c {
 	font-size:1200px;
 	color:grey;
 }
-p,h2,.menu,table,th,td,#ruler,a {
+p,h2,.menu,table,th,td,#ruler,a, input {
 	font:normal 15px/19px Menlo,'Inconsolata',mono;
 }
 h2 {
@@ -63,7 +63,11 @@ table,th,td {
 #mm {
      position:relative;
      top: 10;
-     }
+}
+#saveg{
+	margin: 5px 0;
+	padding: 5px;
+}
 </style>
 
 <div class="title">Global Parameters | Project $cfont.idmaster</div>
