--- a/templates/view.html
+++ b/templates/view.html
@@ -29,7 +29,7 @@ h2{
 #center{
 	top: 500px;
 	bottom: 0;
-	left: -320px;
+	left: -499px;
 	right: 0;
 	height: 0px;
 	width: 0px;
@@ -503,12 +503,14 @@ $for ppp in postspa:
 
 <div id="center">
 	<div>
+<!-- 
 		<left>&#124;&#124;&#124;&#124;&#124;&#124;&#124;</left>
+ -->
 	</div>
 	
 	<div>
 		<middle>
-			<span class="first">$webglyph</span><span class="second">&#124;&#124;&#124;&#124;&#124;&#124;&#124;</span> 
+			<span class="first">$webglyph</span><!-- <span class="second">&#124;&#124;&#124;&#124;&#124;&#124;&#124;</span>  -->
 		<middle>
 	</div>
 
