Fixed Local Param editing view
Can no longer accidentally edit Local Param A in Param B view and vice versa

--- a/templates/font4.html
+++ b/templates/font4.html
@@ -83,7 +83,9 @@ table,th,td {
 	<div id="mmB">
 		<span><a href="/font4/$cfont.idlocalB">B Params Edit</a></span><br><br>
 		<span>
+		<form action="" method="POST" name="formlA">
 		$:formlB.render()
+		</form>
 		</span>
 	</div>
 </div>
