updates in view.html, base.html and parser (xmltomf.py)

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@ $def with (page)
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
 <script type="text/javascript" src="/static/jquery-1.6.4.min.js"></script>
+<script type="text/javascript" src="/static/jquery-ui.min.js"></script>
 <style>
 @font-face {
     font-family: 'metapolator';
