setting presets, turning off dragging test

--- a/templates/view.html
+++ b/templates/view.html
@@ -529,7 +529,7 @@ $for ppp in postspa:
 			<p><a href="/view/$posti.id" style="text-decoration:none">●$posti.PointNr</a></p>
 		</div>
 
-	$if form.d.PointName > "0" : 
+<!-- 	$if form.d.PointName > "0" : 
 		<div class="p$glyphparam.PointNr">
 			<span class="dragThis"><a href="#">⊙</a></span>
 		</div>
@@ -544,6 +544,7 @@ $for ppp in postspa:
 			$$('#y').val(yPos);
 		}
 	});
-	</script>
+	</script>    -->
+
 
 </div>
