put links to login and register page

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,5 +17,7 @@ $else:
 
 $if error:
     <div style="font-weight: 800; color: red">Invalid username or password</div>
+
+<div>or <a href="/register">Register</a></div>
 </body>
 </html>
