--- a/templates/register.html
+++ b/templates/register.html
@@ -12,5 +12,7 @@ $else:
     <form action="" method="post">
         $:form.render()
     </form>
+
+<div>or <a href="/login">Login</a></div>
 </body>
 </html>
