put the changes from server to github

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@ $def with (page)
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<META HTTP-EQUIV="Expires" CONTENT="-1">
 <link rel="icon" href="/static/favicon.ico" type="image/x-icon"/>
 <script type="text/javascript" src="/static/jquery-1.6.4.min.js"></script>
 <script type="text/javascript" src="/static/jquery-ui.min.js"></script>
@@ -84,6 +86,9 @@ right {
 <body>
 
 <div class="menu">
+
+<p><span class="button"><a href="/static/font.otf">Download OTF</a></span></p>
+
 <p><span class="button"><a href="/view/1">Editor&nbsp;&nbsp;</a></span></p>
 <!-- <p><span class="button"><a href="/">Editor&nbsp;&nbsp;</a></span></p> -->
 <p><span class="button"><a href="/viewfont/">Specimen</a></span></p>
