put font family of letter to see the changes

--- a/templates/view.html
+++ b/templates/view.html
@@ -8,6 +8,14 @@ Project $cfont.idmaster
 </title>
 <link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
 <style>
+
+	@font-face {
+	    font-family: 'metapolator';
+	    src: url('$working_url('static/font-webfont.eot')');
+	    src: url('$working_url('static/font-webfont.eot')?#iefix') format('embedded-opentype'), url('$working_url('static/font-webfont.woff')') format('woff'),url('$working_url('static/font-webfont.ttf')') format('truetype'),url('$working_url('static/font-webfont.svg')#metapolator') format('svg');
+	    font-weight: normal;
+	    font-style: normal;
+	}
  .buttonbig {
   color:#08233e;
   font:2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
