--- a/templates/base.html
+++ b/templates/base.html
@@ -91,15 +91,16 @@ $if is_loggedin():
 	<p><span class="button"><a href="$working_url('static/font.otf')">Download OTF</a></span></p>
 
 
-<p><span class="button"><a href="/view/1">Editor&nbsp;&nbsp;</a></span></p>
-<!-- <p><span class="button"><a href="/">Editor&nbsp;&nbsp;</a></span></p> -->
-<p><span class="button"><a href="/viewfont/">Specimen</a></span></p>
-<p><span class="button"><a href="/font1/0">Settings</a></span></p>
-<!-- 
-<span class="button"><a href="/font2/1">Global</a></span><br><br>
-<span class="button"><a href="/font3/1">Local A</a></span><br><br>
-<span class="button"><a href="/font4/1">Local B</a></span><br><br>
- -->
+	<p><span class="button"><a href="/view/1">Editor&nbsp;&nbsp;</a></span></p>
+	<!-- <p><span class="button"><a href="/">Editor&nbsp;&nbsp;</a></span></p> -->
+	<p><span class="button"><a href="/viewfont/">Specimen</a></span></p>
+	<p><span class="button"><a href="/font1/0">Settings</a></span></p>
+	<p><span class="button"><a href="/project/create/">Upload UFO Project</a></span></p>
+	<!-- 
+	<span class="button"><a href="/font2/1">Global</a></span><br><br>
+	<span class="button"><a href="/font3/1">Local A</a></span><br><br>
+	<span class="button"><a href="/font4/1">Local B</a></span><br><br>
+	 -->
 </div>
 
 $:page
