--- a/templates/view.html
+++ b/templates/view.html
@@ -291,7 +291,7 @@ $if form.d.PointName > "0" :
     <input style="margin:0;position:relative;top:-35px;left:180px;" type="button" value="clear" onClick="resetparam()">
 	</p>
     <p>
-    <input style="color:red;height:100px;width:300px;font-size:40px;" type="button" value="Refesh View" onClick="history.go(0), window.location.reload()">
+    <input style="color:red;height:100px;width:300px;font-size:40px;" type="button" value="Refresh View" onClick="history.go(0), window.location.reload()">
     </p>
 <!-- add new parameters here: -->
 <p class="menuleftgreen" >
