in template use edges['edges']

--- a/templates/view.html
+++ b/templates/view.html
@@ -552,7 +552,7 @@ $for ppp in postspa:
 		</middle>
 	</div>
 	
-	$for edge in edges:
+	$for edge in edges['edges']:
         $for point in edge:
             <div>$point['x']x$point['y']</div>
 		<!-- div class="pp$posti.id">
