--- a/templates/view.html
+++ b/templates/view.html
@@ -1,4 +1,4 @@
-$def with (edges,post,form,formparam,formparamG,master,mastglobal,webglyph,glyphparam,groupparam,cfont,postspa)
+$def with (posts,post,form,formparam,formparamG,master,mastglobal,webglyph,glyphparam,groupparam,cfont,postspa)
 <title>
 $if cfont.idwork == '0' :
        A: $cfont.fontna
@@ -192,7 +192,10 @@ a:hover .ptnumber {
 	background:#555;
 	margin:0;
 }
-
+	$for posti in posts:
+	.pp$posti.id { 
+		$posti.position 
+	}	
 .dragThis {
 	position: absolute;
 	color: orange;
@@ -549,12 +552,10 @@ $for ppp in postspa:
 		</middle>
 	</div>
 	
-	$for edge in edges['edges']:
-        $for point in edge:
-            <div>$point['x']x$point['y']</div>
-		<!-- div class="pp$posti.id">
+	$for posti in posts:
+		<div class="pp$posti.id">
 			<p><a href="/view/$posti.id" style="text-decoration:none">●$posti.PointNr</a></p>
-		</div -->
+		</div>
 
  	$if form.d.PointName > "0" : 
 		<div class="p$glyphparam.PointNr">
