simple hack to flip glyph

--- a/templates/paper.html
+++ b/templates/paper.html
@@ -278,17 +278,17 @@
                     };
 
 
-
-    for (var i = 0; i < EDGE_JSON.edges.length; i++) {
-        for (var j = 0; j < EDGE_JSON.edges[i].contours.length; j++) {
+    var edges = EDGE_JSON.edges;
+    for (var i = 0; i < edges.length; i++) {
+        for (var j = 0; j < edges[i].contours.length; j++) {
             var path = new Path();
-            var contours = EDGE_JSON.edges[i].contours[j];
+            var contours = edges[i].contours[j];
             for (var k = 0; k < contours.length; k++) {
                 contour = contours[k];
                 console.log(contour);
-                var segment = new Segment(new Point(contour.x / 3, contour.y / 3),
-                                          new Point(contour.controls[0].x / 3, contour.controls[0].y / 3),
-                                          new Point(contour.controls[1].x / 3, contour.controls[1].y / 3));
+                var segment = new Segment(new Point(contour.x / 3, 500 - contour.y / 3),
+                                          new Point(contour.controls[0].x / 3, 500 - contour.controls[0].y / 3),
+                                          new Point(contour.controls[1].x / 3, 500 - contour.controls[1].y / 3));
                 path.add(segment);
             }
             path.closed = true;
@@ -296,7 +296,6 @@
             path.fullySelected = true;
             path.strokeColor = 'black';
             path.position.x += 500;
-            path.position.y += 300;
             path.smooth();
 
             path.fillColor = {
