--- a/templates/paper.html
+++ b/templates/paper.html
@@ -286,9 +286,9 @@
             for (var k = 0; k < contours.length; k++) {
                 contour = contours[k];
                 console.log(contour);
-                var segment = new Segment(new Point(contour.x / 3, 500 - contour.y / 3),
-                                          new Point(contour.controls[0].x / 3, 500 - contour.controls[0].y / 3),
-                                          new Point(contour.controls[1].x / 3, 500 - contour.controls[1].y / 3));
+                var segment = new Point(contour.x / 3, 500 - contour.y / 3);// , null null
+                                          // new Point(contour.controls[0].x / 3, 500 - contour.controls[0].y / 3),
+                                          // new Point(contour.controls[1].x / 3, 500 - contour.controls[1].y / 3));
                 path.add(segment);
             }
             path.closed = true;
@@ -296,7 +296,7 @@
             path.fullySelected = true;
             path.strokeColor = 'black';
             path.position.x += 500;
-            path.smooth();
+            // path.smooth();
 
             path.fillColor = {
                 hue: 360 * Math.random(),
