--- a/templates/paper.html
+++ b/templates/paper.html
@@ -11,271 +11,87 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script type="text/paperscript" canvas="myCanvas">
     var EDGE_JSON = {
-                      "total_edges": 1,
-                      "edges": [
-                        {
-                          "contours": [
-                            [
-                              {
-                                "y": "532.001",
-                                "x": "927.00089",
-                                "controls": [
-                                  {
-                                    "y": "532.001",
-                                    "x": "881.66751"
-                                  },
-                                  {
-                                    "y": "532.001",
-                                    "x": "836.33414"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "532.001",
-                                "x": "791.00076",
-                                "controls": [
-                                  {
-                                    "y": "361.20222",
-                                    "x": "868.31212"
-                                  },
-                                  {
-                                    "y": "169.19466",
-                                    "x": "737.22511"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "178.99945",
-                                "x": "550.00029",
-                                "controls": [
-                                  {
-                                    "y": "187.29747",
-                                    "x": "391.54794"
-                                  },
-                                  {
-                                    "y": "340.04211",
-                                    "x": "287.69502"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "507.00099",
-                                "x": "280.9999",
-                                "controls": [
-                                  {
-                                    "y": "687.49776",
-                                    "x": "273.76192"
-                                  },
-                                  {
-                                    "y": "857.35077",
-                                    "x": "380.83722"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "864.99983",
-                                "x": "550.00029",
-                                "controls": [
-                                  {
-                                    "y": "872.99068",
-                                    "x": "726.72194"
-                                  },
-                                  {
-                                    "y": "697.3733",
-                                    "x": "853.82108"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "532.001",
-                                "x": "791.00076",
-                                "controls": [
-                                  {
-                                    "y": "532.001",
-                                    "x": "836.33414"
-                                  },
-                                  {
-                                    "y": "532.001",
-                                    "x": "881.66751"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "532.001",
-                                "x": "927.00089",
-                                "controls": [
-                                  {
-                                    "y": "782.62794",
-                                    "x": "1002.2784"
-                                  },
-                                  {
-                                    "y": "1033.94402",
-                                    "x": "811.64153"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "1028.99983",
-                                "x": "550.00029",
-                                "controls": [
-                                  {
-                                    "y": "1024.1363",
-                                    "x": "292.6291"
-                                  },
-                                  {
-                                    "y": "777.92451",
-                                    "x": "114.89835"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "507.00099",
-                                "x": "122.99963",
-                                "controls": [
-                                  {
-                                    "y": "250.39648",
-                                    "x": "130.67274"
-                                  },
-                                  {
-                                    "y": "23.10724",
-                                    "x": "304.44907"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "17.99931",
-                                "x": "550.00029",
-                                "controls": [
-                                  {
-                                    "y": "12.3862",
-                                    "x": "819.83696"
-                                  },
-                                  {
-                                    "y": "276.31506",
-                                    "x": "1013.4187"
-                                  }
-                                ]
-                              }
-                            ],
-                            [
-                              {
-                                "y": "-111.00009",
-                                "x": "325.99922",
-                                "controls": [
-                                  {
-                                    "y": "-159.33339",
-                                    "x": "298.33273"
-                                  },
-                                  {
-                                    "y": "-207.66666",
-                                    "x": "270.66624"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "-255.99995",
-                                "x": "242.99976",
-                                "controls": [
-                                  {
-                                    "y": "-330.54799",
-                                    "x": "324.5044"
-                                  },
-                                  {
-                                    "y": "-366.272",
-                                    "x": "434.2289"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "-353.99954",
-                                "x": "544.0005",
-                                "controls": [
-                                  {
-                                    "y": "-325.72467",
-                                    "x": "796.90617"
-                                  },
-                                  {
-                                    "y": "-86.07631",
-                                    "x": "964.00046"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "177.00061",
-                                "x": "964.00046",
-                                "controls": [
-                                  {
-                                    "y": "177.06955",
-                                    "x": "964.00046"
-                                  },
-                                  {
-                                    "y": "1023.93213",
-                                    "x": "964.00043"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "1024.00107",
-                                "x": "964.00043",
-                                "controls": [
-                                  {
-                                    "y": "1024.00107",
-                                    "x": "910.00056"
-                                  },
-                                  {
-                                    "y": "1024.00107",
-                                    "x": "856.00069"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "1024.00107",
-                                "x": "802.00082",
-                                "controls": [
-                                  {
-                                    "y": "1023.92899",
-                                    "x": "802.00067"
-                                  },
-                                  {
-                                    "y": "138.07262",
-                                    "x": "800.00058"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "138.00052",
-                                "x": "800.00043",
-                                "controls": [
-                                  {
-                                    "y": "-21.03659",
-                                    "x": "799.64134"
-                                  },
-                                  {
-                                    "y": "-164.93227",
-                                    "x": "697.57813"
-                                  }
-                                ]
-                              },
-                              {
-                                "y": "-186.99963",
-                                "x": "544.0005",
-                                "controls": [
-                                  {
-                                    "y": "-198.59526",
-                                    "x": "463.30109"
-                                  },
-                                  {
-                                    "y": "-170.25203",
-                                    "x": "381.9998"
-                                  }
-                                ]
-                              }
-                            ]
-                          ],
-                          "glyph": "71"
-                        }
-                      ]
-                    };
+  "total_edges": 1,
+  "edges": [
+    {
+      "contours": [
+        [
+          {
+            "y": "352.00063",
+            "x": "298.79271",
+            "controls": [
+              {
+                "y": "352.00063",
+                "x": "345.93102"
+              },
+              {
+                "y": "351.98401",
+                "x": "298.79271"
+              }
+            ]
+          },
+          {
+            "y": "147.98015",
+            "x": "298.79271",
+            "controls": [
+              {
+                "y": "147.99675",
+                "x": "298.79271"
+              },
+              {
+                "y": "112.58653",
+                "x": "298.79268"
+              }
+            ]
+          },
+          {
+            "y": "99.56268",
+            "x": "251.00726",
+            "controls": [
+              {
+                "y": "99.84602",
+                "x": "286.33878"
+              },
+              {
+                "y": "99.2715",
+                "x": "214.69847"
+              }
+            ]
+          },
+          {
+            "y": "148.84912",
+            "x": "201.70805",
+            "controls": [
+              {
+                "y": "112.44139",
+                "x": "201.70805"
+              },
+              {
+                "y": "148.8861",
+                "x": "201.70805"
+              }
+            ]
+          },
+          {
+            "y": "603.1652",
+            "x": "201.70805",
+            "controls": [
+              {
+                "y": "603.12823",
+                "x": "201.70805"
+              },
+              {
+                "y": "637.3652",
+                "x": "201.70805"
+              }
+            ]
+          }
+        ]
+      ],
+      "glyph": "39"
+    }
+  ]
+};
 
 
     var edges = EDGE_JSON.edges;
@@ -283,23 +99,20 @@
         for (var j = 0; j < edges[i].contours.length; j++) {
             var path = new Path();
             var contours = edges[i].contours[j];
-            for (var k = 0; k < contours.length; k++) {
+            for (var k = 0; k < contours.length; k++) { // contours.length
                 contour = contours[k];
-                var segment = null;
-                // console.log(contour);
-                console.log({x: contour.x, y: 714 - contour.y,
-                             controls: [{x: contour.x - contour.controls[0].x,
-                                         y: contour.y - contour.controls[0].y},
-                                        {x: contour.x - contour.controls[1].x,
-                                         y: contour.y - contour.controls[1].y}]})
-
-                segment = new Segment(new Point(contour.x, 714 - contour.y),
+                console.log(contour);
+                // console.log({x: contour.x, y: 714 - contour.y,
+                //              controls: [{x: contour.x - contour.controls[0].x,
+                //                          y: contour.y - contour.controls[0].y},
+                //                         {x: contour.x - contour.controls[1].x,
+                //                          y: contour.y - contour.controls[1].y}]})
+                segment = new Segment(new Point(contour.x, contour.y),
                                       new Point(contour.x - contour.controls[0].x,
                                                 contour.y - contour.controls[0].y),
                                       new Point(contour.x - contour.controls[1].x,
-                                                contour.y - contour.controls[1].y));                    
-
-                path.add(segment);
+                                                contour.y - contour.controls[1].y));
+                // path.add(segment);
             }
             // path.closed = true;
             path.selected = true;
@@ -317,5 +130,42 @@
             };
         }
     }
+
+    var path = new Path();
+    segment = new Segment(new Point(298.79271, 300 - 147.98015),
+                          new Point(298.79271 - 298.79271,
+                                    147.98015 - 147.99675),
+                          new Point(298.79271 - 298.79268,
+                                    147.98015 - 112.58653));
+    path.add(segment);
+
+    segment = new Segment(new Point(251.00726, 300 - 99.56268),
+                          new Point(251.00726 - 286.33878,
+                                    99.56268 - 99.84602),
+                          new Point(251.00726 - 214.69847,
+                                    99.56268 - 99.2715));
+    path.add(segment);
+
+    segment = new Segment(new Point(201.70805, 300 - 148.84912),
+                          new Point(201.70805 - 201.70805,
+                                    148.84912 - 112.44139),
+                          new Point(201.70805 - 201.70805,
+                                    148.84912 - 148.8861));
+    path.add(segment);
+
+    path.selected = true;
+    path.fullySelected = true;
+    path.strokeColor = 'black';
+    path.position.x += 500;
+    path.position.y += 300;
+    // path.smooth();
+
+    path.fillColor = {
+        hue: 360 * Math.random(),
+        saturation: 1,
+        brightness: 1,
+        alpha: 0.5
+    };
+
 </script>
 </html>
