--- a/templates/paper.html
+++ b/templates/paper.html
@@ -18,6 +18,20 @@
         [
           {
             "y": "352.00063",
+            "x": "440.20761",
+            "controls": [
+              {
+                "y": "351.98692",
+                "x": "440.20761"
+              },
+              {
+                "y": "352.00063",
+                "x": "393.0693"
+              }
+            ]
+          },
+          {
+            "y": "352.00063",
             "x": "298.79271",
             "controls": [
               {
@@ -85,6 +99,204 @@
                 "x": "201.70805"
               }
             ]
+          },
+          {
+            "y": "650.45207",
+            "x": "248.00427",
+            "controls": [
+              {
+                "y": "649.42825",
+                "x": "213.72311"
+              },
+              {
+                "y": "651.54616",
+                "x": "284.6379"
+              }
+            ]
+          },
+          {
+            "y": "601.94727",
+            "x": "298.293",
+            "controls": [
+              {
+                "y": "638.51492",
+                "x": "298.293"
+              },
+              {
+                "y": "601.93842",
+                "x": "298.293"
+              }
+            ]
+          },
+          {
+            "y": "493.22617",
+            "x": "298.293",
+            "controls": [
+              {
+                "y": "493.23502",
+                "x": "298.293"
+              },
+              {
+                "y": "493.22617",
+                "x": "345.43129"
+              }
+            ]
+          },
+          {
+            "y": "493.22617",
+            "x": "439.70789",
+            "controls": [
+              {
+                "y": "493.22617",
+                "x": "392.5696"
+              },
+              {
+                "y": "493.23254",
+                "x": "439.70789"
+              }
+            ]
+          },
+          {
+            "y": "571.5047",
+            "x": "439.70786",
+            "controls": [
+              {
+                "y": "571.49832",
+                "x": "439.70786"
+              },
+              {
+                "y": "707.9578",
+                "x": "439.70776"
+              }
+            ]
+          },
+          {
+            "y": "755.0007",
+            "x": "249.99554",
+            "controls": [
+              {
+                "y": "754.43709",
+                "x": "388.18741"
+              },
+              {
+                "y": "755.56284",
+                "x": "112.17307"
+              }
+            ]
+          },
+          {
+            "y": "573.28815",
+            "x": "60.29318",
+            "controls": [
+              {
+                "y": "709.27966",
+                "x": "60.29318"
+              },
+              {
+                "y": "573.25629",
+                "x": "60.29318"
+              }
+            ]
+          },
+          {
+            "y": "181.71336",
+            "x": "60.29318",
+            "controls": [
+              {
+                "y": "181.74522",
+                "x": "60.29318"
+              },
+              {
+                "y": "43.34723",
+                "x": "60.29315"
+              }
+            ]
+          },
+          {
+            "y": "-5.00032",
+            "x": "249.99248",
+            "controls": [
+              {
+                "y": "-5.38892",
+                "x": "111.0048"
+              },
+              {
+                "y": "-4.60986",
+                "x": "389.65285"
+              }
+            ]
+          },
+          {
+            "y": "183.58029",
+            "x": "440.20761",
+            "controls": [
+              {
+                "y": "44.46085",
+                "x": "440.20761"
+              },
+              {
+                "y": "183.594",
+                "x": "440.20761"
+              }
+            ]
+          }
+        ],
+        [
+          {
+            "y": "296.23361",
+            "x": "440.20761",
+            "controls": [
+              {
+                "y": "296.23361",
+                "x": "440.1922"
+              },
+              {
+                "y": "333.74477",
+                "x": "440.20761"
+              }
+            ]
+          },
+          {
+            "y": "408.76707",
+            "x": "440.20761",
+            "controls": [
+              {
+                "y": "371.25594",
+                "x": "440.20761"
+              },
+              {
+                "y": "408.76707",
+                "x": "440.1922"
+              }
+            ]
+          },
+          {
+            "y": "408.76707",
+            "x": "250.99957",
+            "controls": [
+              {
+                "y": "408.76707",
+                "x": "251.01498"
+              },
+              {
+                "y": "371.25594",
+                "x": "250.99957"
+              }
+            ]
+          },
+          {
+            "y": "296.23361",
+            "x": "250.99957",
+            "controls": [
+              {
+                "y": "333.74477",
+                "x": "250.99957"
+              },
+              {
+                "y": "296.23361",
+                "x": "251.01498"
+              }
+            ]
           }
         ]
       ],
@@ -107,20 +319,18 @@
                 //                          y: contour.y - contour.controls[0].y},
                 //                         {x: contour.x - contour.controls[1].x,
                 //                          y: contour.y - contour.controls[1].y}]})
-                segment = new Segment(new Point(contour.x, contour.y),
+                segment = new Segment(new Point(contour.x -0 , 300 - contour.y -0),
                                       new Point(contour.x - contour.controls[0].x,
                                                 contour.y - contour.controls[0].y),
                                       new Point(contour.x - contour.controls[1].x,
                                                 contour.y - contour.controls[1].y));
-                // path.add(segment);
+                path.add(segment);
             }
-            // path.closed = true;
             path.selected = true;
             path.fullySelected = true;
             path.strokeColor = 'black';
             path.position.x += 500;
-            path.position.y += 300;
-            // path.smooth();
+            path.position.y += 500;
 
             path.fillColor = {
                 hue: 360 * Math.random(),
@@ -131,41 +341,47 @@
         }
     }
 
-    var path = new Path();
-    segment = new Segment(new Point(298.79271, 300 - 147.98015),
-                          new Point(298.79271 - 298.79271,
-                                    147.98015 - 147.99675),
-                          new Point(298.79271 - 298.79268,
-                                    147.98015 - 112.58653));
-    path.add(segment);
+    // var path = new Path();
+    // segment = new Segment(new Point(298.79271, 300 - 147.98015),
+    //                       new Point(298.79271 - 298.79271,
+    //                                 147.98015 - 147.99675),
+    //                       new Point(298.79271 - 298.79268,
+    //                                 147.98015 - 112.58653));
+    // path.add(segment);
 
-    segment = new Segment(new Point(251.00726, 300 - 99.56268),
-                          new Point(251.00726 - 286.33878,
-                                    99.56268 - 99.84602),
-                          new Point(251.00726 - 214.69847,
-                                    99.56268 - 99.2715));
-    path.add(segment);
+    // segment = new Segment(new Point(251.00726, 300 - 99.56268),
+    //                       new Point(251.00726 - 286.33878,
+    //                                 99.56268 - 99.84602),
+    //                       new Point(251.00726 - 214.69847,
+    //                                 99.56268 - 99.2715));
+    // path.add(segment);
 
-    segment = new Segment(new Point(201.70805, 300 - 148.84912),
-                          new Point(201.70805 - 201.70805,
-                                    148.84912 - 112.44139),
-                          new Point(201.70805 - 201.70805,
-                                    148.84912 - 148.8861));
-    path.add(segment);
+    // segment = new Segment(new Point(201.70805, 300 - 148.84912),
+    //                       new Point(201.70805 - 201.70805,
+    //                                 148.84912 - 112.44139),
+    //                       new Point(201.70805 - 201.70805,
+    //                                 148.84912 - 148.8861));
+    // path.add(segment);
 
-    path.selected = true;
-    path.fullySelected = true;
-    path.strokeColor = 'black';
-    path.position.x += 500;
-    path.position.y += 300;
-    // path.smooth();
+    // segment = new Segment(new Point(201.70805, 300 - 603.1652),
+    //                       new Point(201.70805 - 201.70805,
+    //                                 603.1652 - 603.12823),
+    //                       new Point(201.70805 - 201.70805,
+    //                                 603.1652 - 637.3652));
+    // path.add(segment);
 
-    path.fillColor = {
-        hue: 360 * Math.random(),
-        saturation: 1,
-        brightness: 1,
-        alpha: 0.5
-    };
+    // path.selected = true;
+    // path.fullySelected = true;
+    // path.strokeColor = 'black';
+    // path.position.x += 500;
+    // path.position.y += 300;
+
+    // path.fillColor = {
+    //     hue: 360 * Math.random(),
+    //     saturation: 1,
+    //     brightness: 1,
+    //     alpha: 0.5
+    // };
 
 </script>
 </html>
