new css font1.html

--- a/templates/font1.html
+++ b/templates/font1.html
@@ -1,77 +1,8 @@
 $def with (fontlist,form,mmaster,cfont)
 <title>Settings</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="stylesheet" type="text/css" href="/static/mfg.css"/>
-<style>
-h3_b {
-	position:absolute;
-	z-index:-5;
-	bottom:-350px;
-	left:9px;
-	font-family:"metapolator","backup";
-	font-size:1200px;
-	color:grey;
-}
-h3_a {
-	position:absolute;
-	z-index:-5;
-	bottom:-359px;
-	right:9px;
-	font-family:"metapolator","backup";
-	font-size:1200px;
-	color:grey;
-}
-h3_c {
-	position:absolute;
-	z-index:-5;
-	bottom:-350px;
-	left:619px;
-	font-family:"metapolator","backup";
-	font-size:1200px;
-	color:grey;
-}
-p,h2,.menu,table,th,td,#ruler {
-	font:normal 15px/19px Menlo,'Inconsolata',mono;
-}
-h2 {
-	color:red;
-}
-#center {
-	background:red;
-	bottom:0;
-	height:0px;
-	left:-300;
-	margin:auto;
-	position:absolute;
-	top:200;
-	right:0;
-	width:0px;
-	-webkit-transform:translate(0%,0%) scale(0.80,0.80);
-}
-a:visited {
-		color:inherit;
-	text-decoration:none;
-}
-a:link {
-		color:inherit;
-	text-decoration:none;
-}
-table,th,td {
-	width:200px;
-	text-align:left;
-	color: red;
-}
-.wide{
-line-height:160%;
-}
-.wide a:link,a:visited{
-padding: 5px;
-}
-.wide a:hover{
-font-weight:bold;
-color:red;
-}
-</style>
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+
 
 <h2> fonts in directories</h2>
 <p>
