--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -1,4 +1,5 @@
 $def with (error=None)
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
 
 <div>
 	<h1>Create project</h1>
