--- a/templates/view.html
+++ b/templates/view.html
@@ -10,7 +10,7 @@ Project $cfont.idmaster
 <!-- <link rel="stylesheet" type="text/css" href="/static/mfg.css"/> -->
 
 <div class="row">
-    <div class="span3">
+    <div class="col-md-3">
         <div class="menuright2"><p>
             $for mast in mastglobal:
         	<span class="paramname">mtpltn</span> <span class="value">$mast.metapolation</span><br>
@@ -342,7 +342,7 @@ Project $cfont.idmaster
         <p style="color:blue"> &#9678; undefined points </p>
         <p style="color:CCFFFF"> &#9678; control points </p>
     </div>
-    <div class="span9">
+    <div class="col-md-12">
         <div class="canvas"><canvas id="myCanvas" resize></canvas></div>
     </div>
     
